tests/negative/test_if_cond_no_l_bracket.orb
fnc main() {
    if 1>0) {}
}